le di un color diferente al footer
para variar el color del footer

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -125,7 +125,7 @@ aside .widget p {
 /* Footer */
 footer {
     width: 70%;
-    background: #000;
+    background: #a65d5d;
     color: #fff;
     padding: 15px 0;
     text-align: center;
